# AURA360

./: .gcloudignore  .gitignore  AGENTS.md  CLAUDE.md  CONFLUENT_CLOUD_SETUP.md  CONTRIBUTING.md  DEPLOYMENT_CHECKLIST.md  GEMINI.md  GET_QDRANT_URL.md  KAFKA_HYBRID_SUMMARY.md  KAFKA_QUICK_START.md  KAFKA_ROLLBACK_STRATEGY.md  PRODUCTION_ENV_SETUP.md  QDRANT_INTEGRATION_CHECKLIST.md  QUICKSTART_DEPLOYMENT.md  README.md  SETUP_QDRANT_AND_GCP.md  UV_PERMISSIONS_FIX.md  VERIFICACION_DESPLIEGUES_RESUMEN.md  deploy_all_gcloud.sh  docker-compose.dev.yml  fix_all_permissions.sh  fix_venv_permissions.sh  package-lock.json  package.json  reset_venvs.sh  setup_production_env.sh  test_e2e_kafka_flow.py  test_permissions_fixed.sh  test_user_context_e2e.py
.github/: PULL_REQUEST_TEMPLATE.md
services/agents/: .dockerignore  .env.complete  .env.example  .gitignore  Dockerfile  GUARDIAN_KAFKA_REQUEST_REPLY.md  GUARDIAN_ROUTING.md  README.md  insert_test_data.py  main.py  pyproject.toml  test_qdrant_connection.py  test_semantic_search.py
services/agents/.kilocode/: mcp.json
services/agents/agents_service/: __init__.py
services/agents/api/: __init__.py  dependencies.py
services/agents/api/routers/: holistic.py
services/agents/docs/: environment_variables.md
services/agents/holistic_agent/: __init__.py  agent.py  knowledge.py  mental.py  physical.py  spiritual.py
services/agents/infra/: __init__.py  embeddings.py  env.py  http_client.py  settings.py  vector_store.py
services/agents/kafka/: README.md  __init__.py  consumer.py  handlers.py  response_consumer.py
services/agents/nutritional_agent/: agent.py
services/agents/scripts/: manual_test_guardian_routing.py  smoke_retrieval.py  test_env_loading.py  test_guardian_kafka_flow.py
services/agents/services/: __init__.py  agent_executor.py  exceptions.py  guardian_retrieval.py  holistic.py  topic_classifier.py  vector_queries.py
services/agents/tests/: conftest.py  test_holistic_advice_endpoint.py
services/agents/tests/integration/: test_agents_service_integration.py  test_guardian_routing.py
services/agents/tests/unit/: test_topic_classifier.py
services/api/: .dockerignore  .env.example  .env.production.template  .gitignore  AGENTS.md  AURA360.code-workspace  Dockerfile  Dockerfile.gcloud  ENV_PRODUCTION_SETUP.md  IMPLEMENTACION_CONTEXTO_USUARIO.md  README.md  TESTING.md  pyproject.toml
services/api/.claude/agents/: test-executor.md
services/api/body/: __init__.py  apps.py  models.py  serializers.py  signals.py  urls.py  views.py
services/api/body/migrations/: 0001_initial.py  0002_alter_table_names.py  0003_nutritionplan.py  0004_nutritionplan_created_by_nutritionplan_description_and_more.py  (+1 more)
services/api/config/: __init__.py  celery.py  settings.py  urls.py
services/api/docs/: body_module_schema.md  database_schema.md
services/api/holistic/: apps.py  context_aggregator.py  context_vectorizer.py  context_views.py  intake_definitions.py  models.py  reporting.py  serializers.py  services.py  tasks.py  test_user_context_implementation.py  urls.py  views.py
services/api/papers/: __init__.py  admin.py  apps.py  models.py  serializers.py  urls.py  views.py
services/api/scripts/: README_PAPERS.md  analyze_paper.py  batch_upload_papers.py  check_body_records.py  classify_and_prefix_papers.py  create_gabriel_plan_only.py  create_gabriel_user_and_plan.py  start_celery_worker.sh  test_db_connection.py  validate_production_env.sh  verify_body_tables.py
services/api/users/: admin.py  authentication.py  models.py  permissions.py  serializers.py  urls.py  views.py  views_html.py
services/pdf-extraction/: README.md  pyproject.toml
services/pdf-extraction/app/: __init__.py  config.py  main.py
services/shared/: README.md  pyproject.toml
services/shared/messaging/: __init__.py  backend.py  config.py  consumer.py  events.py  producer.py
services/vectordb/: .dockerignore  .env.example  .gitignore  AGENTS.md  CELERY_TASKS_PROPOSAL.md  COMMIT_MESSAGE.md  DEPLOYMENT_SUMMARY.md  Dockerfile  Dockerfile.api  Dockerfile.worker  KAFKA_CONSUMER_IMPLEMENTATION.md  PHASE1_IMPLEMENTATION_SUMMARY.md  PHASE2_IMPLEMENTATION_SUMMARY.md  PHASE4_IMPLEMENTATION_SUMMARY.md  README.md  docker-compose.e2e.yml  docker-compose.yml  pyproject.toml  test_kafka_consumer.py  test_weighted_retrieval_manual.py
services/vectordb/config/: topics.yaml
services/vectordb/documentation/: APP_FUNCTIONALITY.md  ESTADO_IMPLEMENTACION.md  FASE1_COMPLETED.md  INDEX.md  PlanDeImplementacion.md  QUICKSTART.md  README.md  SCIHUB_DOWNLOADER.md
services/vectordb/scripts/: README.md  backfill_topics.py  create_user_context_collection.py  download_scihub_batch.py  ingest_batch.py  ingest_gcs_prefix.py  ingest_test_papers.py  init_qdrant_collections.py  run_full_ingestion.sh
services/vectordb/tests/: README.md  __init__.py  conftest.py  test_anthropometry.py  test_trends.py
services/vectordb/vectosvc/: config.py
(+466 files in other folders)
