[project]
name = "pdf-extraction-service"
version = "0.1.0"
description = "LLM-powered PDF extraction service for nutrition plans"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "google-genai>=0.2.2",
    "python-multipart>=0.0.20",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4.2",
    "httpx>=0.27.0",
]
